[gd_scene load_steps=16 format=4 uid="uid://bs1qcl3i0qg3m"]

[ext_resource type="Script" uid="uid://2dv37gd3lyj1" path="res://Scenes/world_10.gd" id="1_akivb"]
[ext_resource type="PackedScene" uid="uid://dlsb0wlr35vvf" path="res://Scenes/player.tscn" id="2_akivb"]
[ext_resource type="Texture2D" uid="uid://cl6v0nccjs40q" path="res://Images/world_tileset.png" id="3_6xj1a"]
[ext_resource type="Script" uid="uid://b5ai1ejdj8ubl" path="res://Scenes/endzone.gd" id="4_2evar"]
[ext_resource type="Texture2D" uid="uid://b0cvxa3asxy2p" path="res://Images/banner.png" id="5_ma4rh"]
[ext_resource type="Script" uid="uid://cieorimo10srf" path="res://Scenes/canvas_layer.gd" id="6_np5y4"]
[ext_resource type="Shader" uid="uid://kh73rn8yaqhk" path="res://Scenes/world.gdshader" id="7_kagac"]
[ext_resource type="Script" uid="uid://dgfiql3j15p2s" path="res://Scenes/fake_end_zone.gd" id="8_akivb"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8j60k"]
texture = ExtResource("3_6xj1a")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:0/0 = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:0/0 = 0
9:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:0/0 = 0
10:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -6.4749136, 8, 0.35971832, -8, -1.978445)
11:0/0 = 0
11:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -5.5756197, 8, -6.4749136, 8, 1.0791531, -8, 1.2590122)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:1/0 = 0
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -6.4749136, 8, 0.35971832, -8, -1.978445)
10:1/0 = 0
10:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -5.5756197, 8, -6.4749136, 8, 1.0791531, -8, 1.2590122)
11:1/0 = 0
11:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -6.4749136, 8, -8, 8, -1.4388695, -8, 1.2590122)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:2/0 = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:2/0 = 0
9:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -6.4749136, 8, 0.35971832, -8, -1.978445)
10:2/0 = 0
10:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -5.5756197, 8, -6.4749136, 8, 1.0791531, -8, 1.2590122)
11:2/0 = 0
11:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -6.4749136, 8, -8, 8, -1.4388695, -8, 1.2590122)
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
7:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
1:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
0:7/0 = 0
1:7/0 = 0
3:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
0:9/0 = 0
0:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:9/0 = 0
1:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:9/0 = 0
2:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:9/0 = 0
3:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:9/0 = 0
4:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
6:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
2:4/size_in_atlas = Vector2i(3, 3)
2:4/0 = 0

[sub_resource type="TileSet" id="TileSet_fo5ed"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_8j60k")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mu4q1"]
size = Vector2(16, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5a7ea"]
size = Vector2(20, 281)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ikia7"]
size = Vector2(24, 99.5)

[sub_resource type="FontFile" id="FontFile_5v1tr"]
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/48/0/ascent = 0.0
cache/0/48/0/descent = 0.0
cache/0/48/0/underline_position = 0.0
cache/0/48/0/underline_thickness = 0.0
cache/0/48/0/scale = 1.0
cache/0/300/0/ascent = 0.0
cache/0/300/0/descent = 0.0
cache/0/300/0/underline_position = 0.0
cache/0/300/0/underline_thickness = 0.0
cache/0/300/0/scale = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0fj1v"]
shader = ExtResource("7_kagac")
shader_parameter/blur_amount = 0.0

[node name="World" type="Node2D" groups=["player"]]
script = ExtResource("1_akivb")

[node name="Player" parent="." instance=ExtResource("2_akivb")]
position = Vector2(13, 0)

[node name="Camera2D" parent="Player" index="1"]
zoom = Vector2(2, 2)

[node name="map" type="TileMapLayer" parent="."]
use_parent_material = true
tile_map_data = PackedByteArray("AAD3/wEAAAAAAAAAAAD4/wEAAAAAAAAAAAD5/wEAAAAAAAAAAAD6/wEAAAAAAAAAAAD7/wEAAAAAAAAAAAD8/wEAAAAAAAAAAAD9/wEAAAAAAAAAAAD+/wEAAAAAAAAAAAD//wEAAAAAAAAAAAAAAAEAAAAAAAAAAAABAAEAAAAAAAAAAAACAAEAAAAAAAAAAAADAAEAAAAAAAAAAAAEAAEAAAAAAAAAAAAFAAEAAAAAAAAAAAAGAAEAAAAAAAAAAAAHAAEAAAAAAAAAAAAKAAEAAAAAAAAAAAALAAEAAAAAAAAAAAAMAAEAAAAAAAAAAAANAAEAAAAAAAAAAAAOAAEAAAAAAAAAAAAPAAEAAAAAAAAAAAAQAAEAAAAAAAAAAAARAAEAAAAAAAAAAAASAAEAAAAAAAAAAAATAAEAAAAAAAAAAAAUAAEAAAAAAAAAAAAVAAEAAAAAAAAAAAAWAAEAAAAAAAAAAAAXAAEAAAAAAAAAAAAYAAEAAAAAAAAAAAD3/wIAAAAAAAEAAAD3/wMAAAAAAAEAAAD3/wQAAAAAAAEAAAD4/wQAAAAAAAEAAAD5/wQAAAAAAAEAAAD6/wQAAAAAAAEAAAD7/wQAAAAAAAEAAAD8/wQAAAAAAAEAAAD9/wQAAAAAAAEAAAD+/wQAAAAAAAEAAAD//wQAAAAAAAEAAAAAAAQAAAAAAAEAAAABAAQAAAAAAAEAAAACAAQAAAAAAAEAAAADAAQAAAAAAAEAAAAEAAQAAAAAAAEAAAAFAAQAAAAAAAEAAAAGAAQAAAAAAAEAAAAJAAQAAAAAAAEAAAAKAAQAAAAAAAEAAAALAAQAAAAAAAEAAAAHAAQAAAAAAAEAAAAIAAQAAAAAAAEAAAAYAAIAAAAAAAEAAAAYAAMAAAAAAAEAAAAYAAQAAAAAAAEAAAAXAAQAAAAAAAEAAAAWAAQAAAAAAAEAAAAVAAQAAAAAAAEAAAAUAAQAAAAAAAEAAAATAAQAAAAAAAEAAAASAAQAAAAAAAEAAAARAAQAAAAAAAEAAAAQAAQAAAAAAAEAAAAPAAQAAAAAAAEAAAAOAAQAAAAAAAEAAAANAAQAAAAAAAEAAAAMAAQAAAAAAAEAAAD4/wIAAAAAAAEAAAD5/wIAAAAAAAEAAAD6/wIAAAAAAAEAAAD7/wIAAAAAAAEAAAD8/wIAAAAAAAEAAAD9/wIAAAAAAAEAAAD+/wIAAAAAAAEAAAD//wIAAAAAAAEAAAAAAAIAAAAAAAEAAAABAAIAAAAAAAEAAAACAAIAAAAAAAEAAAADAAIAAAAAAAEAAAAEAAIAAAAAAAEAAAAFAAIAAAAAAAEAAAAGAAIAAAAAAAEAAAAHAAIAAAAAAAEAAAAIAAIAAAAAAAEAAAAJAAIAAAAAAAEAAAAKAAIAAAAAAAEAAAALAAIAAAAAAAEAAAAMAAIAAAAAAAEAAAANAAIAAAAAAAEAAAAOAAIAAAAAAAEAAAAPAAIAAAAAAAEAAAAQAAIAAAAAAAEAAAAQAAMAAAAAAAEAAAARAAMAAAAAAAEAAAASAAMAAAAAAAEAAAATAAMAAAAAAAEAAAAUAAMAAAAAAAEAAAAVAAMAAAAAAAEAAAAWAAMAAAAAAAEAAAAXAAMAAAAAAAEAAAAXAAIAAAAAAAEAAAAWAAIAAAAAAAEAAAAVAAIAAAAAAAEAAAAUAAIAAAAAAAEAAAATAAIAAAAAAAEAAAASAAIAAAAAAAEAAAARAAIAAAAAAAEAAAANAAMAAAAAAAEAAAAOAAMAAAAAAAEAAAAPAAMAAAAAAAEAAAAIAAMAAAAAAAEAAAAHAAMAAAAAAAEAAAALAAMAAAAAAAEAAAAKAAMAAAAAAAEAAAAJAAMAAAAAAAEAAAAMAAMAAAAAAAEAAAACAAMAAAAAAAEAAAABAAMAAAAAAAEAAAAAAAMAAAAAAAEAAAADAAMAAAAAAAEAAAAEAAMAAAAAAAEAAAAFAAMAAAAAAAEAAAAGAAMAAAAAAAEAAAD//wMAAAAAAAEAAAD+/wMAAAAAAAEAAAD9/wMAAAAAAAEAAAD8/wMAAAAAAAEAAAD7/wMAAAAAAAEAAAD6/wMAAAAAAAEAAAD5/wMAAAAAAAEAAAD4/wMAAAAAAAEAAAAIAAEAAAAAAAAAAAAJAAEAAAAAAAAAAAD+/wAAAAAFAAUAAAD+////AAAFAAQAAAD+//7/AAAFAAQAAAD+//3/AAAFAAMAAAANAAAAAAAAAAUAAAANAP//AAAAAAQAAAANAP7/AAAAAAMAAAAZAAEAAAAAAAAAAAAaAAEAAAAAAAAAAAAbAAEAAAAAAAAAAAAcAAEAAAAAAAAAAAAdAAEAAAAAAAAAAAAeAAEAAAAAAAAAAAAfAAEAAAAAAAAAAAAgAAEAAAAAAAAAAAAhAAEAAAAAAAAAAAAiAAEAAAAAAAAAAAAjAAEAAAAAAAAAAAAkAAEAAAAAAAAAAAAlAAEAAAAAAAAAAAAZAAIAAAAAAAEAAAAaAAIAAAAAAAEAAAAbAAIAAAAAAAEAAAAcAAIAAAAAAAEAAAAdAAIAAAAAAAEAAAAeAAIAAAAAAAEAAAAfAAIAAAAAAAEAAAAgAAIAAAAAAAEAAAAhAAIAAAAAAAEAAAAiAAIAAAAAAAEAAAAjAAIAAAAAAAEAAAAkAAIAAAAAAAEAAAAlAAIAAAAAAAEAAAAlAAMAAAAAAAEAAAAlAAQAAAAAAAEAAAAkAAQAAAAAAAEAAAAkAAMAAAAAAAEAAAAjAAMAAAAAAAEAAAAjAAQAAAAAAAEAAAAiAAQAAAAAAAEAAAAhAAQAAAAAAAEAAAAgAAQAAAAAAAEAAAAfAAQAAAAAAAEAAAAeAAQAAAAAAAEAAAAeAAMAAAAAAAEAAAAdAAMAAAAAAAEAAAAcAAMAAAAAAAEAAAAbAAMAAAAAAAEAAAAaAAQAAAAAAAEAAAAZAAQAAAAAAAEAAAAZAAMAAAAAAAEAAAAaAAMAAAAAAAEAAAAbAAQAAAAAAAEAAAAcAAQAAAAAAAEAAAAdAAQAAAAAAAEAAAAfAAMAAAAAAAEAAAAgAAMAAAAAAAEAAAAhAAMAAAAAAAEAAAAiAAMAAAAAAAEAAAAlAAUAAAAAAAEAAAAkAAUAAAAAAAEAAAAjAAUAAAAAAAEAAAAiAAUAAAAAAAEAAAAhAAUAAAAAAAEAAAAgAAUAAAAAAAEAAAAfAAUAAAAAAAEAAAAeAAUAAAAAAAEAAAAdAAUAAAAAAAEAAAAcAAUAAAAAAAEAAAAbAAUAAAAAAAEAAAAaAAUAAAAAAAEAAAAZAAUAAAAAAAEAAAAYAAUAAAAAAAEAAAAXAAUAAAAAAAEAAAAWAAUAAAAAAAEAAAAVAAUAAAAAAAEAAAAUAAUAAAAAAAEAAAATAAUAAAAAAAEAAAASAAUAAAAAAAEAAAARAAUAAAAAAAEAAAAQAAUAAAAAAAEAAAAPAAUAAAAAAAEAAAAOAAUAAAAAAAEAAAANAAUAAAAAAAEAAAAMAAUAAAAAAAEAAAALAAUAAAAAAAEAAAD3/wUAAAAAAAEAAAD4/wUAAAAAAAEAAAD5/wUAAAAAAAEAAAD6/wUAAAAAAAEAAAD7/wUAAAAAAAEAAAD8/wUAAAAAAAEAAAD9/wUAAAAAAAEAAAD+/wUAAAAAAAEAAAD//wUAAAAAAAEAAAAAAAUAAAAAAAEAAAABAAUAAAAAAAEAAAACAAUAAAAAAAEAAAADAAUAAAAAAAEAAAAEAAUAAAAAAAEAAAAFAAUAAAAAAAEAAAAGAAUAAAAAAAEAAAAHAAUAAAAAAAEAAAAIAAUAAAAAAAEAAAAJAAUAAAAAAAEAAAAKAAUAAAAAAAEAAAAmAAEAAAAAAAAAAAAnAAEAAAAAAAAAAAAoAAEAAAAAAAAAAAApAAEAAAAAAAAAAAAqAAEAAAAAAAAAAAArAAEAAAAAAAAAAAAsAAEAAAAAAAAAAAAtAAEAAAAAAAAAAAAuAAEAAAAAAAAAAAAvAAEAAAAAAAAAAAAwAAEAAAAAAAAAAAAxAAEAAAAAAAAAAAAyAAEAAAAAAAAAAAAzAAEAAAAAAAAAAAA0AAEAAAAAAAAAAAA1AAEAAAAAAAAAAAA2AAEAAAAAAAAAAAA3AAEAAAAAAAAAAAAmAAIAAAAAAAEAAAAmAAMAAAAAAAEAAAAmAAQAAAAAAAEAAAAmAAUAAAAAAAEAAAAnAAUAAAAAAAEAAAAoAAUAAAAAAAEAAAApAAUAAAAAAAEAAAAqAAUAAAAAAAEAAAArAAUAAAAAAAEAAAArAAQAAAAAAAEAAAAsAAQAAAAAAAEAAAAtAAQAAAAAAAEAAAAuAAQAAAAAAAEAAAAvAAQAAAAAAAEAAAAwAAQAAAAAAAEAAAAxAAQAAAAAAAEAAAAxAAUAAAAAAAEAAAAyAAUAAAAAAAEAAAAzAAUAAAAAAAEAAAA0AAUAAAAAAAEAAAA1AAUAAAAAAAEAAAA2AAUAAAAAAAEAAAA3AAUAAAAAAAEAAAA3AAQAAAAAAAEAAAA3AAMAAAAAAAEAAAA3AAIAAAAAAAEAAAA2AAIAAAAAAAEAAAA1AAIAAAAAAAEAAAA0AAIAAAAAAAEAAAAzAAIAAAAAAAEAAAAyAAIAAAAAAAEAAAAxAAIAAAAAAAEAAAAwAAIAAAAAAAEAAAAvAAIAAAAAAAEAAAAuAAIAAAAAAAEAAAAtAAIAAAAAAAEAAAAqAAIAAAAAAAEAAAApAAIAAAAAAAEAAAAoAAIAAAAAAAEAAAAnAAIAAAAAAAEAAAArAAIAAAAAAAEAAAAsAAIAAAAAAAEAAAAqAAMAAAAAAAEAAAApAAMAAAAAAAEAAAAoAAMAAAAAAAEAAAAnAAMAAAAAAAEAAAArAAMAAAAAAAEAAAAsAAMAAAAAAAEAAAAtAAMAAAAAAAEAAAAuAAMAAAAAAAEAAAAvAAMAAAAAAAEAAAAwAAMAAAAAAAEAAAAxAAMAAAAAAAEAAAAyAAMAAAAAAAEAAAAzAAMAAAAAAAEAAAA0AAMAAAAAAAEAAAA1AAMAAAAAAAEAAAA2AAMAAAAAAAEAAAA2AAQAAAAAAAEAAAA1AAQAAAAAAAEAAAA0AAQAAAAAAAEAAAAzAAQAAAAAAAEAAAAyAAQAAAAAAAEAAAAqAAQAAAAAAAEAAAApAAQAAAAAAAEAAAAoAAQAAAAAAAEAAAAnAAQAAAAAAAEAAAAsAAUAAAAAAAEAAAAtAAUAAAAAAAEAAAAuAAUAAAAAAAEAAAAvAAUAAAAAAAEAAAAwAAUAAAAAAAEAAAD2/wEAAAAAAAAAAAD1/wEAAAAAAAAAAAD0/wEAAAAAAAAAAADz/wEAAAAAAAAAAADy/wEAAAAAAAAAAADx/wEAAAAAAAAAAADw/wEAAAAAAAAAAADv/wEAAAAAAAAAAAD2/wIAAAAAAAEAAAD1/wIAAAAAAAEAAAD0/wIAAAAAAAEAAADz/wIAAAAAAAEAAADy/wIAAAAAAAEAAADx/wIAAAAAAAEAAADw/wIAAAAAAAEAAADv/wIAAAAAAAEAAADv/wMAAAAAAAEAAADv/wQAAAAAAAEAAADv/wUAAAAAAAEAAADw/wUAAAAAAAEAAADx/wUAAAAAAAEAAADy/wUAAAAAAAEAAADy/wQAAAAAAAEAAADz/wQAAAAAAAEAAAD0/wQAAAAAAAEAAAD1/wQAAAAAAAEAAAD2/wQAAAAAAAEAAAD2/wMAAAAAAAEAAAD1/wMAAAAAAAEAAAD0/wMAAAAAAAEAAADz/wMAAAAAAAEAAADy/wMAAAAAAAEAAADx/wMAAAAAAAEAAADw/wMAAAAAAAEAAADw/wQAAAAAAAEAAADx/wQAAAAAAAEAAAD1/wUAAAAAAAEAAAD2/wUAAAAAAAEAAAD0/wUAAAAAAAEAAADz/wUAAAAAAAEAAADu/wIAAAAAAAEAAADt/wIAAAAAAAEAAADs/wIAAAAAAAEAAADr/wIAAAAAAAEAAADq/wIAAAAAAAEAAADp/wIAAAAAAAEAAADo/wIAAAAAAAEAAADn/wIAAAAAAAEAAADm/wIAAAAAAAEAAADl/wIAAAAAAAEAAADk/wIAAAAAAAEAAADj/wIAAAAAAAEAAADj/wMAAAAAAAEAAADj/wQAAAAAAAEAAADj/wUAAAAAAAEAAADk/wUAAAAAAAEAAADl/wUAAAAAAAEAAADm/wUAAAAAAAEAAADn/wUAAAAAAAEAAADo/wUAAAAAAAEAAADp/wUAAAAAAAEAAADq/wUAAAAAAAEAAADr/wUAAAAAAAEAAADs/wUAAAAAAAEAAADt/wUAAAAAAAEAAADu/wUAAAAAAAEAAADu/wMAAAAAAAEAAADo/wMAAAAAAAEAAADn/wMAAAAAAAEAAADm/wMAAAAAAAEAAADl/wMAAAAAAAEAAADk/wMAAAAAAAEAAADn/wQAAAAAAAEAAADo/wQAAAAAAAEAAADp/wQAAAAAAAEAAADq/wMAAAAAAAEAAADr/wMAAAAAAAEAAADs/wMAAAAAAAEAAADt/wMAAAAAAAEAAADp/wMAAAAAAAEAAADs/wQAAAAAAAEAAADt/wQAAAAAAAEAAADu/wQAAAAAAAEAAADr/wQAAAAAAAEAAADq/wQAAAAAAAEAAADm/wQAAAAAAAEAAADl/wQAAAAAAAEAAADk/wQAAAAAAAEAAADu/wEAAAAAAAAAAADt/wEAAAAAAAAAAADs/wEAAAAAAAAAAADr/wEAAAAAAAAAAADq/wEAAAAAAAAAAADp/wEAAAAAAAAAAADo/wEAAAAAAAAAAADn/wEAAAAAAAAAAADm/wEAAAAAAAAAAADl/wEAAAAAAAAAAADk/wEAAAAAAAAAAADj/wEAAAAAAAAAAAD8//z/AAAAAAkAAAAAAPL/AAAAAAkAAAD8//v/AAAAAAkAAAD7//r/AAAAAAkAAAD6//n/AAAAAAkAAAD4//f/AAAAAAkAAAD3//b/AAAAAAkAAAD2//X/AAAAAAkAAAA=")
tile_set = SubResource("TileSet_fo5ed")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-24, -8)
shape = SubResource("RectangleShape2D_mu4q1")

[node name="StaticBody2D2" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(468, -125)
shape = SubResource("RectangleShape2D_5a7ea")

[node name="EndZone" type="Area2D" parent="."]
position = Vector2(-214, -203)
script = ExtResource("4_2evar")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="EndZone"]
position = Vector2(2, -23)
shape = SubResource("RectangleShape2D_ikia7")

[node name="Sprite2D" type="Sprite2D" parent="EndZone"]
scale = Vector2(2.4375014, 2.9375)
texture = ExtResource("5_ma4rh")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("6_np5y4")

[node name="ClearLabel" type="Label" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0)
offset_left = 150.0
offset_top = 100.0
offset_right = 822.0
offset_bottom = 954.0
theme_override_fonts/font = SubResource("FontFile_5v1tr")
theme_override_font_sizes/font_size = 300
text = "Clear?
"

[node name="BlurRect" type="ColorRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_0fj1v")
offset_left = 2.0
offset_top = 14.0
offset_right = 1282.0
offset_bottom = 734.0

[node name="FadeRect" type="ColorRect" parent="CanvasLayer"]
offset_right = 1280.0
offset_bottom = 720.0

[node name="fake_end_zone" type="Area2D" parent="."]
position = Vector2(401, -5)
script = ExtResource("8_akivb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="fake_end_zone"]
position = Vector2(-186, -29.25)
shape = SubResource("RectangleShape2D_ikia7")

[node name="Sprite2D" type="Sprite2D" parent="fake_end_zone"]
position = Vector2(-2, -0.99999994)
scale = Vector2(2.4375014, 2.9375)
texture = ExtResource("5_ma4rh")

[node name="fake_end_zone2" type="Area2D" parent="."]
position = Vector2(-91, -8)
script = ExtResource("8_akivb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="fake_end_zone2"]
position = Vector2(-183, -29)
shape = SubResource("RectangleShape2D_ikia7")

[node name="Sprite2D" type="Sprite2D" parent="fake_end_zone2"]
position = Vector2(-351.99997, 1.9999998)
scale = Vector2(2.4375014, 2.9375)
texture = ExtResource("5_ma4rh")

[editable path="Player"]
